Fix Mac CMake build https://bugs.webkit.org/show_bug.cgi?id=180835

Reviewed by Andy Estes.

Source/WebCore:

* PlatformMac.cmake:
* platform/graphics/avfoundation/objc/CDMInstanceFairPlayStreamingAVFObjC.h:

Source/WebKit:

* PlatformMac.cmake:
* Shared/WebsiteDataStoreParameters.cpp:
(WebKit::WebsiteDataStoreParameters::ephemeralParametersWithSessionID):
* Shared/WebsiteDataStoreParameters.h:
* UIProcess/API/APIAttachment.h:
* WebProcess/InjectedBundle/InjectedBundle.cpp:
(WebKit::InjectedBundle::setPrivateBrowsingEnabled):
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setSessionID):

Tools:

* DumpRenderTree/mac/DumpRenderTree.mm:
* MiniBrowser/mac/WK1BrowserWindowController.m:



Canonical link: https://commits.webkit.org/196729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225931 268f45cc-cd09-0410-ab3c-d52691b4dbfc