Source/WebKit/WebProcess/WebPage/WebPage.cpp
@@ -2742,7 +2742,7 @@ void WebPage::setLayerHostingMode(LayerHostingMode layerHostingMode)
 void WebPage::setSessionID(PAL::SessionID sessionID)
 {
     if (sessionID.isEphemeral())
-        WebProcess::singleton().addWebsiteDataStore({{ }, { }, { }, { }, { }, { }, { sessionID, { }, { }, { }}});
+        WebProcess::singleton().addWebsiteDataStore(WebsiteDataStoreParameters::ephemeralParametersWithSessionID(sessionID));
     m_page->setSessionID(sessionID);
 }
 
