Source/WebCore/PlatformMac.cmake
@@ -499,6 +499,7 @@ set(WebCore_FORWARDING_HEADERS_DIRECTORIES
     svg
     workers
 
+    Modules/applicationmanifest
     Modules/applepay
     Modules/cache
     Modules/geolocation
@@ -591,6 +592,7 @@ set(WebCore_FORWARDING_HEADERS_DIRECTORIES
 
     workers/service
 
+    workers/service/context
     workers/service/server
 
     xml
